--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
                 <version>5.3.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>2.0.9</version>
+            </dependency>
+
+
             <!-- Cucumber TestNG dependency (Optional if using TestNG) -->
             <!-- If you're using Cucumber with TestNG, keep this dependency. -->
             <dependency>
