--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
                 <version>7.18.1</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>io.github.bonigarcia</groupId>
+                <artifactId>webdrivermanager</artifactId>
+                <version>5.7.0</version>
+            </dependency>
             <!-- Selenium WebDriver dependency -->
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
